subtask 5/deployment-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webapp-ns
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers: 
      - name: webapp-container
        image: crccheck/hello-world
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp-ns
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
